--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SimpleMP</string>
+    <string name="app_name">Music</string>
     <string name="undefined">Undefined</string>
     <string name="notification_channel_name" translatable="false">Playback</string>
     <string name="notificationChannelDescription" translatable="false">Simple MP Playback</string>
